[tool.poetry]
name = "isat"
version = "0.1.0"
description = "Add poetry to dagster and prefect"
authors = ["luxintenebris <81024283+luxintenebris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
prefect = "^2.8.2"
dagster = "^1.1.19"
catboost = "^1.1.1"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
